--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,16 @@
 [project]
 name = "ds-event-stream-python-sdk"
 version = "0.1.0"
-description = "Add your description here"
+description = "Python SDK for Kafka event streaming (Grasp Labs)"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "confluent-kafka>=2.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "datamodel-code-generator>=0.25.0",
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.0.0",
+]
