--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -31,12 +31,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine toml
+          pip install build twine
 
       - name: Get current version
         id: current_version
         run: |
-          CURRENT_VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])")
+          # Use grep and sed to extract version from pyproject.toml (more reliable than Python parsing)
+          CURRENT_VERSION=$(grep '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Current version: $CURRENT_VERSION"
 
@@ -45,6 +46,9 @@ jobs:
         run: |
           PR_TITLE="${{ github.event.pull_request.title }}"
           PR_BODY="${{ github.event.pull_request.body }}"
+
+          echo "PR Title: $PR_TITLE"
+          echo "PR Body: $PR_BODY"
 
           # Check for version bump indicators in PR title or body
           if echo "$PR_TITLE $PR_BODY" | grep -i -E "(breaking|major|BREAKING CHANGE)" > /dev/null; then
