--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,17 @@
 name: Deploy to PyPI
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      version_bump:
+        description: 'Version bump type'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+        - patch
+        - minor
+        - major
 
 permissions:
   contents: write
@@ -38,27 +46,12 @@ jobs:
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Current version: $CURRENT_VERSION"
 
-      - name: Determine version bump type
+      - name: Set version bump type
         id: bump_type
         run: |
-          # Get PR title from the merge commit message (first line)
-          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-          PR_TITLE=$(echo "$COMMIT_MESSAGE" | head -n 1)
-
-          echo "Commit Message: $COMMIT_MESSAGE"
-          echo "PR Title: $PR_TITLE"
-
-          # Check for version bump indicators in PR title
-          if echo "$PR_TITLE" | grep -i -E "(breaking|major|BREAKING CHANGE)" > /dev/null; then
-            echo "bump_type=major" >> $GITHUB_OUTPUT
-            echo "Detected: MAJOR version bump"
-          elif echo "$PR_TITLE" | grep -i -E "(feat|feature|minor)" > /dev/null; then
-            echo "bump_type=minor" >> $GITHUB_OUTPUT
-            echo "Detected: MINOR version bump"
-          else
-            echo "bump_type=patch" >> $GITHUB_OUTPUT
-            echo "Detected: PATCH version bump"
-          fi
+          BUMP_TYPE="${{ github.event.inputs.version_bump }}"
+          echo "bump_type=$BUMP_TYPE" >> $GITHUB_OUTPUT
+          echo "Selected version bump type: $BUMP_TYPE"
 
       - name: Bump version
         id: new_version
@@ -107,8 +100,8 @@ jobs:
       - name: Commit version bump
         run: |
           git add pyproject.toml
-          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
-          git push origin main
+          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}" || echo "No changes to commit"
+          git push origin main || echo "Push failed, continuing anyway"
 
       - name: Create and push tag
         run: |
@@ -137,10 +130,7 @@ jobs:
           body: |
             ## 🚀 Release v${{ steps.new_version.outputs.new_version }}
 
-            **Automated release from commit ${{ github.sha }}**
-
-            ### Changes
-            ${{ github.event.head_commit.message }}
+            **Manual release triggered by ${{ github.actor }}**
 
             ### Version Bump
             - **Previous version:** ${{ steps.current_version.outputs.current_version }}
