--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -24,9 +24,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -41,23 +38,17 @@ jobs:
       - name: Get current version
         id: current_version
         run: |
-          # Use grep and sed to extract version from pyproject.toml (more reliable than Python parsing)
           CURRENT_VERSION=$(grep '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Current version: $CURRENT_VERSION"
-
-      - name: Set version bump type
-        id: bump_type
-        run: |
-          BUMP_TYPE="${{ github.event.inputs.version_bump }}"
-          echo "bump_type=$BUMP_TYPE" >> $GITHUB_OUTPUT
-          echo "Selected version bump type: $BUMP_TYPE"
 
       - name: Bump version
         id: new_version
         run: |
           CURRENT_VERSION="${{ steps.current_version.outputs.current_version }}"
-          BUMP_TYPE="${{ steps.bump_type.outputs.bump_type }}"
+          BUMP_TYPE="${{ github.event.inputs.version_bump }}"
+
+          echo "Bumping version: $CURRENT_VERSION ($BUMP_TYPE)"
 
           # Parse current version
           IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
@@ -83,14 +74,14 @@ jobs:
 
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "New version: $NEW_VERSION"
+          echo "Version bump: $CURRENT_VERSION -> $NEW_VERSION ($BUMP_TYPE)"
 
-          # Update pyproject.toml using sed (compatible with both Linux and macOS)
-          if [[ "$OSTYPE" == "darwin"* ]]; then
-            sed -i '' "s/version = \"[^\"]*\"/version = \"$NEW_VERSION\"/" pyproject.toml
-          else
-            sed -i "s/version = \"[^\"]*\"/version = \"$NEW_VERSION\"/" pyproject.toml
-          fi
+          # Update pyproject.toml with new version
+          sed -i "s/version = \"[^\"]*\"/version = \"$NEW_VERSION\"/" pyproject.toml
+
+          # Verify the change
+          echo "Updated pyproject.toml:"
+          grep "version = " pyproject.toml
 
       - name: Configure git
         run: |
@@ -100,21 +91,24 @@ jobs:
       - name: Commit version bump
         run: |
           git add pyproject.toml
-          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}" || echo "No changes to commit"
-          git push origin main || echo "Push failed, continuing anyway"
+          git commit -m "chore: bump version to ${{ steps.new_version.outputs.new_version }}"
+          git push origin main
 
       - name: Create and push tag
         run: |
-          git tag -a "v${{ steps.new_version.outputs.new_version }}" -m "Release v${{ steps.new_version.outputs.new_version }}"
+          git tag "v${{ steps.new_version.outputs.new_version }}"
           git push origin "v${{ steps.new_version.outputs.new_version }}"
 
       - name: Build package
         run: |
           python -m build
+          echo "Package built successfully"
+          ls -la dist/
 
       - name: Check package
         run: |
           twine check dist/*
+          echo "Package validation passed"
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -123,24 +117,25 @@ jobs:
           verbose: true
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.new_version.outputs.new_version }}
-          name: Release v${{ steps.new_version.outputs.new_version }}
+          release_name: Release v${{ steps.new_version.outputs.new_version }}
           body: |
             ## 🚀 Release v${{ steps.new_version.outputs.new_version }}
 
-            **Manual release triggered by ${{ github.actor }}**
+            **Automated deployment to PyPI**
 
             ### Version Bump
             - **Previous version:** ${{ steps.current_version.outputs.current_version }}
             - **New version:** ${{ steps.new_version.outputs.new_version }}
-            - **Bump type:** ${{ steps.bump_type.outputs.bump_type }}
+            - **Bump type:** ${{ github.event.inputs.version_bump }}
 
             ### Links
             - **PyPI Package:** https://pypi.org/project/ds-event-stream-python-sdk/${{ steps.new_version.outputs.new_version }}/
             - **Documentation:** https://grasp-labs.github.io/ds-event-stream-py-sdk/
-            - **Commit:** ${{ github.sha }}
 
             ### Installation
             ```bash
@@ -148,5 +143,3 @@ jobs:
             ```
           draft: false
           prerelease: false
-          files: dist/*
-          generate_release_notes: true
