--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ds-event-stream-python-sdk"
 version = "0.1.0"
-description = "Python SDK for Kafka event streaming (Grasp Labs)"
+description = "A modern Python SDK for Kafka event streaming (Grasp Labs)"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "Apache-2.0"
