--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -32,28 +32,12 @@ jobs:
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "Deploying version: $CURRENT_VERSION"
 
-      - name: Create and push tag
+      - name: Prepare release info
+        id: release_info
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          TAG_NAME="v${{ steps.current_version.outputs.current_version }}"
-
-          # Check if tag already exists locally and delete it
-          if git tag -l | grep -q "^${TAG_NAME}$"; then
-            echo "Tag ${TAG_NAME} already exists locally, deleting it"
-            git tag -d "${TAG_NAME}"
-          fi
-
-          # Check if tag exists on remote and delete it
-          if git ls-remote --tags origin | grep -q "refs/tags/${TAG_NAME}$"; then
-            echo "Tag ${TAG_NAME} already exists on remote, deleting it"
-            git push origin ":refs/tags/${TAG_NAME}" || echo "Failed to delete remote tag, continuing..."
-          fi
-
-          # Create and push new tag
-          git tag "${TAG_NAME}"
-          git push origin "${TAG_NAME}"
+          echo "version=${{ steps.current_version.outputs.current_version }}" >> $GITHUB_OUTPUT
+          echo "tag_name=v${{ steps.current_version.outputs.current_version }}" >> $GITHUB_OUTPUT
+          echo "Preparing release for version ${{ steps.current_version.outputs.current_version }}"
 
       - name: Build package
         run: |
@@ -76,12 +60,30 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            // First create the tag
+            try {
+              await github.rest.git.createRef({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: 'refs/tags/${{ steps.release_info.outputs.tag_name }}',
+                sha: context.sha
+              });
+              console.log('Tag created: ${{ steps.release_info.outputs.tag_name }}');
+            } catch (error) {
+              if (error.status === 422) {
+                console.log('Tag already exists: ${{ steps.release_info.outputs.tag_name }}');
+              } else {
+                throw error;
+              }
+            }
+
+            // Then create the release
             const { data: release } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: 'v${{ steps.current_version.outputs.current_version }}',
-              name: 'Release v${{ steps.current_version.outputs.current_version }}',
-              body: `## 🚀 Release v${{ steps.current_version.outputs.current_version }}
+              tag_name: '${{ steps.release_info.outputs.tag_name }}',
+              name: 'Release ${{ steps.release_info.outputs.tag_name }}',
+              body: `## 🚀 Release ${{ steps.release_info.outputs.tag_name }}
 
             **Automated deployment to PyPI**
 
