--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ds-event-stream-py-sdk"
-dynamic = ["version"]
+version = "0.2.1.alpha.1"
 description = "A Python package from the DS library collection"
 dependencies = [
     "confluent-kafka>=2.10.1",
     "ds-common-logger-py-lib>=0.1.0-alpha.1,<1.0.0",
+    "ds-common-serde-py-lib>=0.1.0-alpha.2,<1.0.0",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = "Apache-2.0"
 license-files = ["LICENSE-APACHE"]
 keywords = ["ds", "kafka", "python"]
@@ -22,7 +23,6 @@ maintainers = [
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -52,11 +52,13 @@ dev = [
     "sphinx>=7.1.0",
     "sphinx-autoapi>=3.0.0",
     "sphinx-material>=0.0.35",
+    "types-confluent-kafka>=1.4.0",
 ]
 test = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-xdist>=3.3.0",
+    "types-confluent-kafka>=1.4.0",
 ]
 docs = [
     "sphinx>=7.1.0",
@@ -69,9 +71,6 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 ds_event_stream_py_sdk = ["py.typed"]
-
-[tool.setuptools.dynamic]
-version = {file = "VERSION.txt"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
